frontend/test/should_pass/exact_007.grg
rule r {
	exact pattern {
		x:Node;
		y:Node;
		x --> y;
		y --> ;
	}
	replace {
	}
}

