frontend/test/should_fail/attrib_088.grg
using attrib_model_002;

rule dummy {
  pattern {}
  replace {}
}
